Change url names in UrlShorteners Module and build Notebooks Module

--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="">Django Edu</a>
+    <a class="navbar-brand" href="/">Django Edu</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -14,10 +14,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="/">Home </a>
-        <a class="nav-item nav-link" href="{% url 'urlshorteners:get_all' %}">
-          Shorten URLs
-        </a>
         <a
           class="nav-item nav-link"
           href="{% url 'admin:index' %}"
@@ -25,6 +21,12 @@
           rel="noopener noreferrer"
         >
           Admin
+        </a>
+        <a class="nav-item nav-link" href="{% url 'notebooks:index' %}">
+          Notebooks
+        </a>
+        <a class="nav-item nav-link" href="{% url 'urlshorteners:index' %}">
+          Shorten URLs
         </a>
       </div>
     </div>
