--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <div class="text-center p-3 bg-secondary text-white">
+  <div class="text-center p-3 bg-dark text-white">
     © 2021 Copyright:
     <a class="text-white" href="/">Django-Edu.com</a>
   </div>
