--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -22,6 +22,9 @@
         >
           Admin
         </a>
+        <a class="nav-item nav-link" href="{% url 'dictionaries:index' %}">
+          Dictionaries
+        </a>
         <a class="nav-item nav-link" href="{% url 'notebooks:index' %}">
           Notebooks
         </a>
