--- a/src/others/templates/others/index.html
+++ b/src/others/templates/others/index.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %} 
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
   <h1>Home page</h1>
   <p>Welcome, {{ request.user }}</p>
 </div>
