--- a/src/urlshorteners/templates/urlshorteners/index.html
+++ b/src/urlshorteners/templates/urlshorteners/index.html
@@ -38,10 +38,10 @@
               >{% url 'urlshorteners:go' url.uuid %}</a
             >
           </td>
-          <td>
+          <td class="text-center">
             <button
               type="button"
-              class="btn btn-danger btn-delete-shorten-link"
+              class="btn btn-outline-danger btn-delete-shorten-link"
               data-url-id="{{ url.id }}"
             >
               Delete
