Build Polls Module

--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -45,6 +45,11 @@
               Notebooks
             </a>
             <div class="dropdown-divider"></div>
+            
+            <a class="dropdown-item" href="{% url 'polls:index' %}">
+              Polls
+            </a>
+            <div class="dropdown-divider"></div>
 
             <a class="dropdown-item" href="{% url 'urlshorteners:index' %}">
               Shorten URLs
